--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,8 @@
     <h4>Guess a number</h4>
 
     <div class="sample_container_id">
-      <form action="http://localhost:4040/test"
+<!--      <form action="http://localhost:4040/test" -->
+      <form action="http://dart-sample.longbay.dartblob.com/test"
             method="GET">
 
         <select name="q">
